@@ -14,6 +14,7 @@ version <next>:
 - vividas demuxer
 - hymt decoder
 - anlmdn filter
+- Intel QSV-accelerated MJPEG decoding
 
 
 version 4.1:
